--- a/profile.html
+++ b/profile.html
@@ -1,1 +1,78 @@
-Thanakorn Waleejaroenpong
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Thanakorn</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <div style="display: inline-block;"><h1>Thanakorn Waleejaroenpong, 642115021</h1></div>
+    
+    <blockquote>Hey, I'm Pepe, I'm student at <b>Chiang Mai University</b> and I like a dog</blockquote>
+    <a href="mailto:tanakorn_wal@cmu.ac.th">tanakorn_wal@cmu.ac.th</a>
+    <br><br>
+
+    <h1>Profile</h1>
+    <p>
+        I'm Pepe, I interest in this subject and I want to be a programer. In my free time I love to watch a movie and play game sometime.
+    </p>
+    <p>
+        After graduate I want to do some business.
+    </p>
+    <table>
+        <tr>
+            <td><b>Skill & Abilities</b></td>
+            <td>
+                <ol>
+                    <li>Videographer</li>
+                    <li>Photographer</li>
+                    <li>Coder</li>
+                </ol>
+            </td>
+
+        </tr>
+        <tr>
+            <td><b>Education</b></td>
+            <td>
+                <dl>
+                    <dt>Kindergarten</dt>
+                        <dd>At Anuban Dan Sai</dd>
+                    <dt>Primary School</dt>
+                        <dd>At Anuban Dan Sai</dd>
+                    <dt>Middle school</dt>
+                        <dd>At Srisongrakwittaya School</dd>
+                    <dt>High school</dt>
+                        <dd>At Srisongrakwittaya School</dd>
+                </dl>
+            </td>
+        </tr>
+        <tr>
+            <td><b>Activities</b></td>
+            <td>
+                <dl>
+                    <dt><b>Activities #1 2562 - 2564</b></dt>
+                        <dd>At school</dd>
+                        <dd>Photographer</dd>
+                        <dd>
+                            <li>
+                                I'm main Photographer at school
+                            </li>
+                        </dd>
+                    <dt><b>Activities #2 2562 - 2564</b></dt>
+                        <dd>At school</dd>
+                        <dd>Videographer</dd>
+                        <dd>
+                            <li>
+                                I'm main Videographer at school
+                            </li>
+                        </dd>
+                </dl>
+            </td>
+        </tr>
+        <tr>
+            <td><b>Quote</b></td>
+            <td><blockquote><b>Dream big and dare to fail.</b></blockquote></td>
+        </tr>
+    </table>
+
+</body>
+</html>
