--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <div style="display: inline-block;"><a href="index.html">HOME</a> </div>    |
     <div style="display: inline-block;"><a href="profile.html">MY PROFILE</a> </div>    |
     <div style="display: inline-block;"><a href="camt.html">MY PROFILE</a> </div>    |
+    To be continued
 </body>
 </html>
